Bug 467615 - Inconsistent application title
Summary: Inconsistent application title
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-03-20 16:50 UTC by Oliver Beard
Modified: 2023-03-31 10:13 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Beard 2023-03-20 16:50:15 UTC
SUMMARY
drkonqi is known by several names in the GUI:
 - "Crashed Processes Viewer" (.desktop)
 - "Intensive Care - DrKonqi Intensive Care" (window title)
 - "[appname] - The KDE Crash Handler" (on app crash, SIGSEGV)


STEPS TO REPRODUCE
1. View in KRunner, open app, cause crash respectively

OBSERVED RESULT
Inconsistency in app titles

EXPECTED RESULT
Preferably, the application uses the same name throughout all the usage scenarios. "KDE Crash Handler" might be appropriate.
Comment 1 Harald Sitter 2023-03-31 10:13:24 UTC
Git commit 1207f1e617e6a5152ae4c0e6b903b663b8b27dd4 by Harald Sitter.
Committed on 31/03/2023 at 10:09.
Pushed by sitter into branch 'master'.

simplify and align naming

M  +1    -1    src/coredump/gui/main.cpp
M  +1    -1    src/coredump/gui/qml/main.qml
M  +2    -2    src/main.cpp

https://invent.kde.org/plasma/drkonqi/commit/1207f1e617e6a5152ae4c0e6b903b663b8b27dd4