simplify and align naming

BUG: 467615